--- a/public/nav.css
+++ b/public/nav.css
@@ -144,6 +144,15 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     outline: none;
     background-color: transparent;
     width: calc(100% - 80px);
+    transition: .4s ease;
+    -webkit-transition: .4s ease;
+    -moz-transition: .4s ease;
+    -ms-transition: .4s ease;
+    -o-transition: .4s ease;
+}
+
+#nav .search input.hide {
+    color: transparent;
 }
 
 #nav .right {
@@ -205,7 +214,7 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     margin-top: 4px;
 }
 
-#nav .right .more, #nav .right .messages {
+#nav .right .more, #nav .right .messages, #nav .right .music {
     width: 30px;
     margin-right: 20px;
     padding: 2px;
@@ -216,13 +225,67 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     -o-border-radius: 5px;
 }
 
-#nav .right .messages {
+#nav .right .messages, #nav .right .music {
     padding: 5px;
     width: 24px;
 }
 
-#nav .right .more:hover, #nav .right .messages:hover {
+#nav .right .more:hover, #nav .right .messages:hover, #nav .right .music:hover {
     background-color: rgba(0, 0, 0, .05);
+}
+
+#nav .right .music {
+    position: absolute;
+    padding: 2px;
+    margin: 8px;
+    border: 2px solid transparent;
+    transform: translateX(-60px);
+    -webkit-transform: translateX(-60px);
+    -moz-transform: translateX(-60px);
+    -ms-transform: translateX(-60px);
+    -o-transform: translateX(-60px);
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#nav .right .music.playing {
+    fill: #0074D9;
+    background-color: rgba(0, 102, 255, 0.1);
+    padding: 5px;
+    margin: 5px;
+    border-radius: 80px;
+    -webkit-border-radius: 80px;
+    -moz-border-radius: 80px;
+    -ms-border-radius: 80px;
+    -o-border-radius: 80px;
+    animation: music-playing 2s ease infinite;
+    -webkit-animation: music-playing 2s ease infinite;
+    cursor: pointer;
+}
+
+#nav .right .music.playing:hover {
+    background-color: rgba(0, 102, 255, 0.2);
+}
+
+@keyframes music-playing {
+    0% {
+        border: 2px solid transparent;
+    }
+
+    50% {
+        border: 2px solid rgba(0, 93, 175, .5);
+    }
+
+    70% {
+        border: 2px solid rgba(0, 93, 175, .5);
+    }
+
+    100% {
+        border: 2px solid transparent;
+    }
 }
 
 #nav .right .avatar {
@@ -1810,4 +1873,161 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
 #users > div .buttons .cancel:hover {
     color: #222;
     border-bottom: 2px solid #222;
+}
+
+/* XX / Music / @music
+========================== */
+#music {
+    font-family: "Roboto", sans-serif;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 280px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    cursor: default;
+    z-index: 10;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#music.hidden {
+    opacity: .2;
+    transform: translateX(400px) rotate(20deg);
+    -webkit-transform: translateX(400px) rotate(20deg);
+    -moz-transform: translateX(400px) rotate(20deg);
+    -ms-transform: translateX(400px) rotate(20deg);
+    -o-transform: translateX(400px) rotate(20deg);
+}
+
+#music .title {
+    padding: 15px;
+}
+
+#music .title svg {
+    width: 24px;
+    margin-right: 10px;
+    float: left;
+}
+
+#music .title h4 {
+    font-family: "Lexend Deca", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+#music .title h4 span {
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    margin-left: 5px;
+}
+
+#music .title svg.close {
+    position: absolute;
+    top: 10px;
+    right: 2px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 20px;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+#music .title svg.close:hover {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+#music .list {
+    max-height: 220px;
+    overflow-y: scroll;
+
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, .3) transparent;
+}
+
+#music .list div {
+    padding: 7px 0 7px 15px;
+    height: 40px;
+    cursor: pointer;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+    border: 0px solid rgba(0, 0, 0, .15);
+}
+
+#music .list div:hover {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+#music .list .playing {
+    padding: 12px 0 12px 15px;
+    border-top: 2px solid rgba(0, 0, 0, .15);
+    border-bottom: 2px solid rgba(0, 0, 0, .15);
+}
+
+#music .list .playing:hover {
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+}
+
+#music .list div .img {
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+    background-position: center;
+    background-size: cover;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, .3);
+    float: left;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#music .list .playing .img {
+    border-radius: 80px;
+    -webkit-border-radius: 80px;
+    -moz-border-radius: 80px;
+    -ms-border-radius: 80px;
+    -o-border-radius: 80px;
+}
+
+#music .list .playing h4 {
+    color: #0074D9;
+}
+
+#music .list div span {
+    margin-right: 10px;
+}
+
+#music .player audio {
+    border-radius: 0 0 15px 15px;
+    -webkit-border-radius: 0 0 15px 15px;
+    -moz-border-radius: 0 0 15px 15px;
+    -ms-border-radius: 0 0 15px 15px;
+    -o-border-radius: 0 0 15px 15px;
 }
